# vscodedemo

./: .gitignore  CMakeLists.txt  README.md  demo1.cpp  main.cpp  prime.cpp
include/: add.h  prime.h
libs/Debug/: addlib.lib  prime.lib
src/: add.cpp  main.cpp
src/libs/: CMakeLists.txt
